# Cpp-CustomDatabaseEngine

./: .gitignore  CMakeLists.txt  README.md
database/: mydatabase.db  mysqlsampledatabase.sql
docs/: architecture.md  class_and_sequence_diagram  design_patterns.md  usage.md
sqlite3/lib/: sqlite3.exp  sqlite3.lib
src/: DatabaseEngine.cpp  DatabaseEngine.hpp  Indexing.cpp  Indexing.hpp  QueryProcessor.cpp  QueryProcessor.hpp  StorageEngine.cpp  StorageEngine.hpp  TransactionData.hpp  TransactionManager.cpp  TransactionManager.hpp  main.cpp  python_bindings.cpp
tests/: test_DatabaseEngine.cpp  test_QueryProcessor.cpp  test_StorageEngine.cpp  test_TransactionManager.cpp
